--- a/_xlarge.scss
+++ b/_xlarge.scss
@@ -15,6 +15,8 @@ p {
     padding: 1em;
 }
 
+.header__home_smhide{display: none;} 
+
 .header__hamburger {
     display: none;
 }
@@ -50,6 +52,10 @@ p {
     margin: 0 0 0 2em;
 }
 
+.header__menuitem_smhide {
+    display: block;
+}
+
 .header__close {
     display: none;
 }
@@ -58,7 +64,6 @@ p {
 /*--------LANDING-----------------*/
 
 .landing {
-    height: 40vh;
     grid-template-columns: repeat(12, 1fr);
     align-items: center;
     margin: 5em 0 0 0;
@@ -121,12 +126,13 @@ p {
     display: grid;
     padding: 0;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-rows: repeat(6, auto);
     justify-content: center;
     margin: 4em 0 0 0;
+
     blockquote {
         font-size: 2.5em;
-        grid-column: 2 / 6;
+        grid-column: 3 / 7;
         grid-row: 1 / 6;
         margin: 0;
         text-align: left;
@@ -134,13 +140,19 @@ p {
         align-self: center;
     }
 
-    span {
-        font-size: 1em;
-        grid-column: 2 / 5;
-        grid-row: 5 / 6;
-        margin: 0;
-        align-self: flex-end;
-    }
+}
+
+.about__quote {
+    font-size: 1em;
+    grid-column: 3 / 5;
+    grid-row: 5 / 6;
+    margin: 0;
+    align-self: flex-start;
+}
+
+.about__hero_role {
+    grid-column: 2 / 10;
+    grid-row: 5 / 6;
 }
 
 .about__overlay {
@@ -154,7 +166,6 @@ p {
 
     img {
         width: 100%;
-        max-height: 370px;
         object-fit: cover;
     }
 }
@@ -170,15 +181,19 @@ p {
 }
 
 .about__items {
-    grid-template-columns: repeat(24, 1fr);
-    grid-template-rows: repeat(24, 30px);
-
+    //grid-template-columns: repeat(24, 1fr);
+    //grid-template-rows: repeat(24, 30px);
+    display: block;
+    height: 70vh;
+    width: 1000px;
+    margin: 0 auto;
 }
 
 .about__circle {
     width: 160px;
     height: 160px;
     margin: 0;
+    position: absolute;
 
     img {
         width: 60%;
@@ -192,38 +207,59 @@ p {
 
 
 .about__circle1 {
-    grid-column: 13 / 18;
-    grid-row: 2 / 7;
+    //grid-column: 13 / 18;
+    //grid-row: 2 / 7;
+    left: 50%;
+    top: 15%;
+    transform: translate(-50%, -15%);
 }
 
 .about__circle2 {
-    grid-column: 16 / 21;
-    grid-row: 7 / 12;
+    //grid-column: 16 / 21;
+    //grid-row: 7 / 12;
+    left: 70%;
+    top: 30%;
+    transform: translate(-80%, -30%);
 }
 
 .about__circle3 {
-    grid-column: 15 / 20;
-    grid-row: 13 / 18;
+    //grid-column: 15 / 20;
+    //grid-row: 13 / 18;
+    left: 75%;
+    top: 60%;
+    transform: translate(-75%, -60%);
 }
 
 .about__circle4 {
-    grid-column: 11 / 16;
-    grid-row: 17 / 22;
+    //grid-column: 11 / 16;
+    //grid-row: 17 / 22;
+    left: 60%;
+    top: 85%;
+    transform: translate(-60%, -85%);
 }
 
 .about__circle5 {
-    grid-column: 7 / 12;
-    grid-row: 13 / 18;
+    //grid-column: 7 / 12;
+    //grid-row: 13 / 18;
+    left: 40%;
+    top: 85%;
+    transform: translate(-40%, -85%);
 }
 
 .about__circle6 {
-    grid-column: 5 / 10;
-    grid-row: 7 / 12;
+    //grid-column: 5 / 10;
+    //grid-row: 7 / 12;
+    left: 25%;
+    top: 60%;
+    transform: translate(-25%, -60%);
 }
 
 .about__circle7 {
-    grid-column: 8 / 13;
-    grid-row: 2 / 7;
+    //grid-column: 8 / 13;
+    //grid-row: 2 / 7;
+    left: 30%;
+    top: 30%;
+    transform: translate(-20%, -30%);
 }
 
 /*--------APPROACH-----------------*/
