--- a/style.scss
+++ b/style.scss
@@ -71,8 +71,12 @@ p {
     background: #fff;
     z-index: 99;
     box-shadow: 0 -2px 15px #ddd;
+
 }
 
+.header__home_smhide{
+    display: inline-block;
+} 
 .header__hamburger {
     position: fixed;
     bottom: 0;
@@ -82,22 +86,21 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0.3em;
+    padding: 0.25em;
     background: #fff;
     cursor: pointer;
 
     i {
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
 
     span {
-        font-size: 0.9em;
+        font-size: 0.8em;
     }
 }
 
 .header__logo {
     display: flex;
-    justify-content: center;
     align-items: center;
     align-content: center;
     position: relative;
@@ -111,6 +114,13 @@ p {
         max-width: 250px;
         transform: translateY(-15%);
     }
+
+}
+
+.fa-home {
+    font-size: 1.6em;
+    color: $primarycolor;
+    cursor: pointer;
 }
 
 .header__navbar {
@@ -148,6 +158,11 @@ p {
     position: relative;
     margin: 0 0 3em 0;
     cursor: pointer;
+    color: $primarycolor;
+}
+
+.header__menuitem_smhide {
+    display: none;
 }
 
 .header__close {
@@ -155,7 +170,7 @@ p {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 2em;
+    font-size: 1.5em;
     margin: 0 0 0.5em 0;
     cursor: pointer;
 }
@@ -163,11 +178,12 @@ p {
 /*--------LANDING-----------------*/
 
 .landing {
-    height: 13em;
+    height: 100vh;
     background: $primarybg;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    justify-content: space-around;
+    grid-template-rows: repeat(12, 1fr);
+    justify-content: center;
     align-items: center;
     margin: 3em 0 0 0;
     position: relative;
@@ -180,30 +196,34 @@ p {
 }
 
 .landing__valueprop {
-    margin: 0 0 1em 0;
+    margin: 0 auto;
     font-weight: 500;
     font-size: 0.8em;
     letter-spacing: 2px;
     text-transform: uppercase;
     z-index: 1;
     width: 100%;
-    display: flex;
-    grid-column: 2 / -1;
-    grid-row: 1 / 4;
+    align-self: center;
+    grid-column: 1 / -1;
+    grid-row: 2 / 9;
+    text-align: center;
+    line-height: 2;
 }
 
 .landing__valueprop_span1 {
-    font-size: 1.2em;
+    font-size: 1.3em;
     font-weight: 700;
+    margin: 0 0 1em 0;
 }
 
 .landing__valueprop_span2 {
-    font-size: 1.3em;
+    font-size: 1.4em;
     font-weight: 700;
+    margin: 0 0 1em 0;
 }
 
 .landing__valueprop_span3 {
-    font-size: 2em;
+    font-size: 2.2em;
     font-weight: 700;
 }
 
@@ -211,7 +231,7 @@ p {
     display: flex;
     justify-content: center;
     grid-column: 1 / -1;
-    grid-row: 3 / 5;
+    grid-row: 7 / 9;
 
     svg {
         justify-self: flex-end;
@@ -260,42 +280,45 @@ p {
 
 .about__hero {
     background: $secondarybg;
-    height: 45vh;
     position: relative;
     display: grid;
     padding: 1em 0 0 0;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, auto);
     justify-content: center;
-    margin: 3em 0 0 0;
+    margin: 1em 0 0 0;
+
     blockquote {
         color: #fff;
-        font-size: 1.1em;
+        font-size: 1.5em;
         font-weight: bold;
-        grid-column: 1 / -1;
+        grid-column: 1 / 5;
         grid-row: 1 / 5;
         margin: 0 1em 0.3em;
-        text-align: center;
     }
+}
 
-    span {
-        color: #fff;
-        font-size: 0.8em;
-        background-color: transparent;
-        grid-column: 1 / -1;
-        grid-row: 4 / 4;
-        margin: 1em 0 0 4em;
-    }
+.about__quote {
+    color: #fff;
+    font-size: 0.8em;
+    background-color: transparent;
+    grid-column: 1 / -1;
+    grid-row: 5 / 6;
+    margin: 0.5em 0 0 2em;
+}
+
+.about__hero_role {
+    display: none;
 }
 
 .about__overlay {
     width: 100%;
     height: 100%;
     grid-column: 1 / -1;
-    grid-row: 4 / 8;
+    grid-row: 2 / -1;
 
     img {
-        width: 100%;
+        width: 95%;
     }
 }
 
@@ -321,7 +344,7 @@ p {
     grid-template-rows: auto;
     margin: 1em 0 0 0;
     padding: 1em;
-
+    position: relative;
 }
 
 .about__circle {
@@ -335,6 +358,7 @@ p {
     align-items: center;
     justify-self: center;
     margin: 0 0 1em 0;
+    position: relative;
 
     img {
         width: 50%;
@@ -428,12 +452,34 @@ p {
 }
 
 .approach__season1 {
-    height: 50vh;
+    height: 100vh;
     background: $primarybg;
 
-    img {
-        width: 100%;
-    }
+}
+
+.approach__intro {
+    width: 80%;
+    box-shadow: 2px 2px 15px #d1ba67;
+    margin: auto;
+    border-radius: 10px;
+}
+
+.approach__season1cards {
+    width: 80%;
+    display: flex;
+}
+
+.approach__scard {
+    display: none;
+    width: 200px;
+    min-width: 200px;
+    height: 300px;
+    background: #e0e0e0;
+    box-shadow: 0 0 15px 8px #eeeeee inset,
+        0 0 15px #cacaca;
+    ;
+    border-radius: 10px;
+
 }
 
 .approach__upcoming {
