--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,10 @@ p {
   box-shadow: 0 -2px 15px #ddd;
 }
 
+.header__home_smhide {
+  display: inline-block;
+}
+
 .header__hamburger {
   position: fixed;
   bottom: 0;
@@ -78,20 +82,19 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0.3em;
+  padding: 0.25em;
   background: #fff;
   cursor: pointer;
 }
 .header__hamburger i {
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 .header__hamburger span {
-  font-size: 0.9em;
+  font-size: 0.8em;
 }
 
 .header__logo {
   display: flex;
-  justify-content: center;
   align-items: center;
   align-content: center;
   position: relative;
@@ -104,6 +107,12 @@ p {
   width: 220px;
   max-width: 250px;
   transform: translateY(-15%);
+}
+
+.fa-home {
+  font-size: 1.6em;
+  color: #272727;
+  cursor: pointer;
 }
 
 .header__navbar {
@@ -140,6 +149,11 @@ p {
   position: relative;
   margin: 0 0 3em 0;
   cursor: pointer;
+  color: #272727;
+}
+
+.header__menuitem_smhide {
+  display: none;
 }
 
 .header__close {
@@ -147,18 +161,19 @@ p {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 2em;
+  font-size: 1.5em;
   margin: 0 0 0.5em 0;
   cursor: pointer;
 }
 
 /*--------LANDING-----------------*/
 .landing {
-  height: 13em;
+  height: 100vh;
   background: #FFDE70;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  justify-content: space-around;
+  grid-template-rows: repeat(12, 1fr);
+  justify-content: center;
   align-items: center;
   margin: 3em 0 0 0;
   position: relative;
@@ -171,30 +186,34 @@ p {
 }
 
 .landing__valueprop {
-  margin: 0 0 1em 0;
+  margin: 0 auto;
   font-weight: 500;
   font-size: 0.8em;
   letter-spacing: 2px;
   text-transform: uppercase;
   z-index: 1;
   width: 100%;
-  display: flex;
-  grid-column: 2/-1;
-  grid-row: 1/4;
+  align-self: center;
+  grid-column: 1/-1;
+  grid-row: 2/9;
+  text-align: center;
+  line-height: 2;
 }
 
 .landing__valueprop_span1 {
-  font-size: 1.2em;
+  font-size: 1.3em;
   font-weight: 700;
+  margin: 0 0 1em 0;
 }
 
 .landing__valueprop_span2 {
-  font-size: 1.3em;
+  font-size: 1.4em;
   font-weight: 700;
+  margin: 0 0 1em 0;
 }
 
 .landing__valueprop_span3 {
-  font-size: 2em;
+  font-size: 2.2em;
   font-weight: 700;
 }
 
@@ -202,7 +221,7 @@ p {
   display: flex;
   justify-content: center;
   grid-column: 1/-1;
-  grid-row: 3/5;
+  grid-row: 7/9;
 }
 .landing__cta svg {
   justify-self: flex-end;
@@ -246,41 +265,44 @@ p {
 
 .about__hero {
   background: #03243C;
-  height: 45vh;
   position: relative;
   display: grid;
   padding: 1em 0 0 0;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, auto);
   justify-content: center;
-  margin: 3em 0 0 0;
+  margin: 1em 0 0 0;
 }
 .about__hero blockquote {
   color: #fff;
-  font-size: 1.1em;
+  font-size: 1.5em;
   font-weight: bold;
-  grid-column: 1/-1;
+  grid-column: 1/5;
   grid-row: 1/5;
   margin: 0 1em 0.3em;
-  text-align: center;
 }
-.about__hero span {
+
+.about__quote {
   color: #fff;
   font-size: 0.8em;
   background-color: transparent;
   grid-column: 1/-1;
-  grid-row: 4/4;
-  margin: 1em 0 0 4em;
+  grid-row: 5/6;
+  margin: 0.5em 0 0 2em;
+}
+
+.about__hero_role {
+  display: none;
 }
 
 .about__overlay {
   width: 100%;
   height: 100%;
   grid-column: 1/-1;
-  grid-row: 4/8;
+  grid-row: 2/-1;
 }
 .about__overlay img {
-  width: 100%;
+  width: 95%;
 }
 
 .about__text {
@@ -303,6 +325,7 @@ p {
   grid-template-rows: auto;
   margin: 1em 0 0 0;
   padding: 1em;
+  position: relative;
 }
 
 .about__circle {
@@ -316,6 +339,7 @@ p {
   align-items: center;
   justify-self: center;
   margin: 0 0 1em 0;
+  position: relative;
 }
 .about__circle img {
   width: 50%;
@@ -402,11 +426,30 @@ p {
 }
 
 .approach__season1 {
-  height: 50vh;
+  height: 100vh;
   background: #FFDE70;
 }
-.approach__season1 img {
-  width: 100%;
+
+.approach__intro {
+  width: 80%;
+  box-shadow: 2px 2px 15px #d1ba67;
+  margin: auto;
+  border-radius: 10px;
+}
+
+.approach__season1cards {
+  width: 80%;
+  display: flex;
+}
+
+.approach__scard {
+  display: none;
+  width: 200px;
+  min-width: 200px;
+  height: 300px;
+  background: #e0e0e0;
+  box-shadow: 0 0 15px 8px #eeeeee inset, 0 0 15px #cacaca;
+  border-radius: 10px;
 }
 
 .approach__upcoming {
@@ -592,6 +635,10 @@ p {
     padding: 1em;
   }
 
+  .header__home_smhide {
+    display: none;
+  }
+
   .header__hamburger {
     display: none;
   }
@@ -627,13 +674,16 @@ p {
     margin: 0 0 0 2em;
   }
 
+  .header__menuitem_smhide {
+    display: block;
+  }
+
   .header__close {
     display: none;
   }
 
   /*--------LANDING-----------------*/
   .landing {
-    height: 40vh;
     grid-template-columns: repeat(12, 1fr);
     align-items: center;
     margin: 5em 0 0 0;
@@ -691,25 +741,31 @@ p {
     display: grid;
     padding: 0;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-rows: repeat(6, auto);
     justify-content: center;
     margin: 4em 0 0 0;
   }
   .about__hero blockquote {
     font-size: 2.5em;
-    grid-column: 2/6;
+    grid-column: 3/7;
     grid-row: 1/6;
     margin: 0;
     text-align: left;
     justify-content: flex-end;
     align-self: center;
   }
-  .about__hero span {
+
+  .about__quote {
     font-size: 1em;
-    grid-column: 2/5;
+    grid-column: 3/5;
     grid-row: 5/6;
     margin: 0;
-    align-self: flex-end;
+    align-self: flex-start;
+  }
+
+  .about__hero_role {
+    grid-column: 2/10;
+    grid-row: 5/6;
   }
 
   .about__overlay {
@@ -723,7 +779,6 @@ p {
   }
   .about__overlay img {
     width: 100%;
-    max-height: 370px;
     object-fit: cover;
   }
 
@@ -734,14 +789,17 @@ p {
   }
 
   .about__items {
-    grid-template-columns: repeat(24, 1fr);
-    grid-template-rows: repeat(24, 30px);
+    display: block;
+    height: 70vh;
+    width: 1000px;
+    margin: 0 auto;
   }
 
   .about__circle {
     width: 160px;
     height: 160px;
     margin: 0;
+    position: absolute;
   }
   .about__circle img {
     width: 60%;
@@ -752,38 +810,45 @@ p {
   }
 
   .about__circle1 {
-    grid-column: 13/18;
-    grid-row: 2/7;
+    left: 50%;
+    top: 15%;
+    transform: translate(-50%, -15%);
   }
 
   .about__circle2 {
-    grid-column: 16/21;
-    grid-row: 7/12;
+    left: 70%;
+    top: 30%;
+    transform: translate(-80%, -30%);
   }
 
   .about__circle3 {
-    grid-column: 15/20;
-    grid-row: 13/18;
+    left: 75%;
+    top: 60%;
+    transform: translate(-75%, -60%);
   }
 
   .about__circle4 {
-    grid-column: 11/16;
-    grid-row: 17/22;
+    left: 60%;
+    top: 85%;
+    transform: translate(-60%, -85%);
   }
 
   .about__circle5 {
-    grid-column: 7/12;
-    grid-row: 13/18;
+    left: 40%;
+    top: 85%;
+    transform: translate(-40%, -85%);
   }
 
   .about__circle6 {
-    grid-column: 5/10;
-    grid-row: 7/12;
+    left: 25%;
+    top: 60%;
+    transform: translate(-25%, -60%);
   }
 
   .about__circle7 {
-    grid-column: 8/13;
-    grid-row: 2/7;
+    left: 30%;
+    top: 30%;
+    transform: translate(-20%, -30%);
   }
 
   /*--------APPROACH-----------------*/
